# kendo

./: .gitignore  README.md  TODO.md  policies.yaml  pyproject.toml
kendo/: datasource.py  factory.py  main.py
kendo/backends/: connection.py  crud.py
kendo/backends/snowflake/: connection.py  ddl.py
kendo/schemas/: enums.py  mapped_objs.py
kendo/services/: common.py  configuration.py  security_clearance.py  tags.py  test.py
kendo/snowflake/: app.py  connection.py
kendo/snowflake/ddl/config/: v1.py
kendo/snowflake/models/: database.py  tag.py
kendo/snowflake/schemas/: common.py  enums.py  tags.py
kendo/snowflake/services/: configuration.py  security_clearance.py  tags.py
kendo/snowflake/utils/: config_db_connection.py  constants.py  crud.py  rich.py
sample/: kendo.yml  set_tag.json
